fix edge case spacing for none slider

--- a/src/sass/60_components/_components.team-card.scss
+++ b/src/sass/60_components/_components.team-card.scss
@@ -87,6 +87,11 @@
         @include media-breakpoint-up(md) {
           -webkit-line-clamp: 3;
           line-clamp: 3;
+
+          .c-team__members &{
+            -webkit-line-clamp: 2;
+            line-clamp: 2;
+          }
         }
 
         @include media-breakpoint-up(xxl) {
@@ -260,6 +265,10 @@
       @include media-breakpoint-up(md) {
         -webkit-line-clamp: 2;
         line-clamp: 2;
+        .c-team__members &{
+            -webkit-line-clamp: 1;
+            line-clamp: 1;
+          }
       }
 
       @include media-breakpoint-up(lg) {
